--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <title>Desafio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
         <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
     </head>
 
@@ -36,7 +35,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-xl-10">
+                <div class="col-xs-12 col-xl-10">
                     <div class="listad-noticias">
                         <div class="noticia">
                             <div class="cabecera">
