--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     </head>
 
     <body>
-        <div class="container">
-            <div class="row">
-                <div class="menu">
-                    <div class="col-lg-12">
-                        <div class="logo">Diario</div>
-                        <div class="nav">
+        <nav class="menu">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-2 col-lg-12">
+                        <div class="menu__logo">Diario</div>
+                        <div class="menu__nav">
                             <ul>
                                 <li><a href="">Nosotros</a></li>
                                 <li><a href="">Contacto</a></li>
                                 <li>
                                     <input
-                                        class="input-menu"
+                                        class="menu__nav--input-menu"
                                         type="text"
                                         name="buscar"
                                         placeholder="buscar..."
@@ -31,154 +31,168 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-xl-10">
-                    <div class="listad-noticias">
-                        <div class="noticia">
-                            <div class="cabecera">
-                                <h2>
-                                    Lorem ipsum dolor sit amet,
-                                </h2>
-                            </div>
-                            <div class="cuerpo">
-                                <img
-                                    src="https://picsum.photos/200/300?random=1"
-                                />
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit.
-                                </p>
-                            </div>
+        </nav>
+        <div class="container row">
+            <div class="col-xs-10 col-lg-10">
+                <div class="listad-noticias">
+                    <article
+                        class="listad-noticias__noticia col-xs-12 col-sd-12 col-md-4 col-lg-4"
+                    >
+                        <div class="listad-noticias__cabecera">
+                            <h2>
+                                Lorem ipsum dolor sit amet,
+                            </h2>
                         </div>
-                        <div class="noticia">
-                            <div class="cabecera">
-                                <h2>
-                                    Lorem ipsum dolor sit amet,
-                                </h2>
-                            </div>
-                            <div class="cuerpo">
-                                <img
-                                    src="https://picsum.photos/200/300?random=2"
-                                />
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit.
-                                </p>
-                            </div>
+                        <div class="listad-noticias__noticia--cuerpo">
+                            <picture>
+                                <source media="(max-width:500px)" srcset="https://picsum.photos/1024/600?random=1">
+                                <img src="https://picsum.photos/200/300?random=1" />
+                            </picture>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit.
+                            </p>
                         </div>
-                        <div class="noticia">
-                            <div class="cabecera">
-                                <h2>
-                                    Lorem ipsum dolor sit amet,
-                                </h2>
-                            </div>
-                            <div class="cuerpo">
-                                <img
-                                    src="https://picsum.photos/200/300?random=3"
-                                />
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit.
-                                </p>
-                            </div>
+                    </article>
+                    <article
+                        class="listad-noticias__noticia col-xs-12 col-sd-12 col-md-4 col-lg-4"
+                    >
+                        <div class="listad-noticias__cabecera">
+                            <h2>
+                                Lorem ipsum dolor sit amet,
+                            </h2>
                         </div>
-                        <div class="noticia">
-                            <div class="cabecera">
-                                <h2>
-                                    Lorem ipsum dolor sit amet,
-                                </h2>
-                            </div>
-                            <div class="cuerpo">
-                                <img
-                                    src="https://picsum.photos/200/300?random=4"
-                                />
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit.
-                                </p>
-                            </div>
+                        <div class="listad-noticias__noticia--cuerpo">
+                            <picture>
+                                <source media="(max-width:500px)" srcset="https://picsum.photos/1024/600?random=2">
+                                <img src="https://picsum.photos/200/300?random=2" />
+                            </picture>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit.
+                            </p>
                         </div>
-                        <div class="noticia">
-                            <div class="cabecera">
-                                <h2>
-                                    Lorem ipsum dolor sit amet,
-                                </h2>
-                            </div>
-                            <div class="cuerpo">
-                                <img
-                                    src="https://picsum.photos/200/300?random=5"
-                                />
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit.
-                                </p>
-                            </div>
+                    </article>
+                    <article
+                        class="listad-noticias__noticia col-xs-12 col-sd-12 col-md-4 col-lg-4"
+                    >
+                        <div class="listad-noticias__cabecera">
+                            <h2>
+                                Lorem ipsum dolor sit amet,
+                            </h2>
                         </div>
-                        <div class="noticia">
-                            <div class="cabecera">
-                                <h2>
-                                    Lorem ipsum dolor sit amet,
-                                </h2>
-                            </div>
-                            <div class="cuerpo">
-                                <img
-                                    src="https://picsum.photos/200/300?random=6"
-                                />
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit.
-                                </p>
-                            </div>
+                        <div class="listad-noticias__noticia--cuerpo">
+                            <picture>
+                                <source media="(max-width:500px)" srcset="https://picsum.photos/1024/600?random=3">
+                                <img src="https://picsum.photos/200/300?random=3" />
+                            </picture>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit.
+                            </p>
                         </div>
-                    </div>
-                    <div class="col-xl-2">
-                        <div class="listado-izquierdo">
-                            <div class="cabecera-listado">
-                                <h1>Nosotros</h1>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua.
-                                    Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip
-                                    ex ea commodo
-                                </p>
-                            </div>
-                            <div class="tags">
-                                <h1>Tags</h1>
-                                <ul>
-                                    <li>Viajes</li>
-                                    <li>Noticias</li>
-                                    <li>Comida</li>
-                                </ul>
-                            </div>
-                            <div class="noticias-destacadas">
-                                <h1>Destacados</h1>
-                                <div class="item">
-                                    <h4>Lorem ipsum dolor sit amet.</h4>
-                                    <img
-                                        src="https://picsum.photos/200/200?random=7"
-                                    />
-                                </div>
-                                <div class="item">
-                                    <h4>Lorem ipsum dolor sit amet.</h4>
-                                    <img
-                                        src="https://picsum.photos/200/200?random=8"
-                                    />
-                                </div>
-                                <div class="item">
-                                    <h4>Lorem ipsum dolor sit amet.</h4>
-                                    <img
-                                        src="https://picsum.photos/200/200?random=9"
-                                    />
-                                </div>
-                            </div>
+                    </article>
+                    <article
+                        class="listad-noticias__noticia col-xs-12 col-sd-12 col-md-4 col-lg-4"
+                    >
+                        <div class="listad-noticias__cabecera">
+                            <h2>
+                                Lorem ipsum dolor sit amet,
+                            </h2>
                         </div>
-                    </div>
+                        <div class="listad-noticias__noticia--cuerpo">
+                            <picture>
+                                <source media="(max-width:500px)" srcset="https://picsum.photos/1024/600?random=4">
+                                <img src="https://picsum.photos/200/300?random=4" />
+                            </picture>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit.
+                            </p>
+                        </div>
+                    </article>
+                    <article
+                        class="listad-noticias__noticia ccol-xs-12 col-sd-12 col-md-4 col-lg-4"
+                    >
+                        <div class="listad-noticias__cabecera">
+                            <h2>
+                                Lorem ipsum dolor sit amet,
+                            </h2>
+                        </div>
+                        <div class="listad-noticias__noticia--cuerpo">
+                            <picture>
+                                <source media="(max-width:500px)" srcset="https://picsum.photos/1024/600?random=5">
+                                <img src="https://picsum.photos/200/300?random=5" />
+                            </picture>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit.
+                            </p>
+                        </div>
+                    </article>
+                    <article
+                        class="listad-noticias__noticia col-xs-12 col-sd-12 col-md-4 col-lg-4"
+                    >
+                        <div class="listad-noticias__cabecera">
+                            <h2>
+                                Lorem ipsum dolor sit amet,
+                            </h2>
+                        </div>
+                        <div class="listad-noticias__noticia--cuerpo">
+                            <picture>
+                                <source media="(max-width:500px)" srcset="https://picsum.photos/1024/600?random=6">
+                                <img src="https://picsum.photos/200/300?random=6" />
+                            </picture>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit.
+                            </p>
+                        </div>
+                    </article>
                 </div>
+                <aside class="col-xs-12 col-sd-12 col-md-12 col-lg-12">
+                    <div class="listado-izquierdo">
+                        <div class="listado-izquierdo__cabecera-listado">
+                            <h1>Nosotros</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut
+                                enim ad minim veniam, quis nostrud exercitation
+                                ullamco laboris nisi ut aliquip ex ea commodo
+                            </p>
+                        </div>
+                        <div class="listado-izquierdo__tags">
+                            <h1>Tags</h1>
+                            <ul>
+                                <li>Viajes</li>
+                                <li>Noticias</li>
+                                <li>Comida</li>
+                            </ul>
+                        </div>
+                        <div class="listado-izquierdo__noticias-destacadas">
+                            <h1>Destacados</h1>
+                            <div class="item">
+                                <h4>Lorem ipsum dolor sit amet.</h4>
+                                <img
+                                    src="https://picsum.photos/200/200?random=7"
+                                />
+                            </div>
+                            <div class="item">
+                                <h4>Lorem ipsum dolor sit amet.</h4>
+                                <img
+                                    src="https://picsum.photos/200/200?random=8"
+                                />
+                            </div>
+                            <div class="item">
+                                <h4>Lorem ipsum dolor sit amet.</h4>
+                                <img
+                                    src="https://picsum.photos/200/200?random=9"
+                                />
+                            </div>
+                        </div>
+                    </div>
+                </aside>
             </div>
         </div>
 
@@ -197,11 +211,11 @@
             </div>
         </div>
         <footer class="footer container">
-          <div class="row">
-               <div class="col-lg-12">
+            <div class="row">
+                <div class="col-lg-12">
                     <p>Todos los derechos reservados</p>
-               </div>
-          </div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
