--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
         <div class="newsletter container">
             <div class="row">
-                <div class="col-xl-12">
+                <div class="col-xs-12 col-xl-12">
                     <h2>Lorem ipsum dolor sit amet</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -212,7 +212,7 @@
         </div>
         <footer class="footer container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-xs-12 col-lg-12">
                     <p>Todos los derechos reservados</p>
                 </div>
             </div>
