--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
         <div class="newsletter container">
             <div class="row">
-                <div class="col-xs-12 col-xl-12">
+                <div class="col-xs-12 col-lg-12">
                     <h2>Lorem ipsum dolor sit amet</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing
