--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </nav>
-        <div class="container row">
+        <main class="container row">
             <div class="col-xs-12 col-lg-8">
                 <div class="listad-noticias">
                     <article
@@ -194,9 +194,9 @@
                     </div>
                 </aside>
             </div>
-        </div>
+        </main>
 
-        <div class="newsletter container">
+        <section class="newsletter container">
             <div class="row">
                 <div class="col-xs-12 col-lg-12">
                     <h2>Lorem ipsum dolor sit amet</h2>
@@ -209,7 +209,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <footer class="footer container">
             <div class="row">
                 <div class="col-xs-12 col-lg-12">
